# hackathon_II

./: .dockerignore  .env.example  .gitignore  ERROR_REPORT.md  ERROR_REPORT_CONNECTION_ABORT.md  GEMINI.md  README.md  package-lock.json  pyproject.toml
.specify/memory/: constitution.md
backend/: Dockerfile  debug_user_create.py  fix_alembic_version.py  requirements.txt  test_config.py  todo.db
backend/app/: agents.py  config.py  database.py  main.py  password.py  security.py  utils.py
backend/migrations/: env.py
backend/src/: main.py  models.py
backend/tests/: test_models.py  test_ui.py
design/authentication_-_sign_in_1/: code.html
design/authentication_-_sign_in_2/: code.html
design/dashboard_-_chat_panel_1/: code.html
design/dashboard_-_chat_panel_2/: code.html
design/dashboard_-_sidebar_navigation_1/: code.html
design/dashboard_-_sidebar_navigation_2/: code.html
design/dashboard_-_task_list_1/: code.html
design/dashboard_-_task_list_2/: code.html
design/landing_page_-_features_section_1/: code.html
design/landing_page_-_features_section_2/: code.html
design/landing_page_-_hero_section_1/: code.html
design/landing_page_-_hero_section_2/: code.html
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-todo-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py  models.py  service.py  ui.py
tests/: test_main.py  test_service.py
(+146 files in other folders)
