[project]
name = "console-todo-app"
version = "0.1.0"
description = "Phase I Console Todo Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "uv>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
